@@ -17,7 +17,7 @@ oci8_base_class_t oci8_base_class = {
 ID oci8_id_new;
 static ID id_oci8_class;
 
-static VALUE cOCI8Base;
+static VALUE cOCIHandle;
 static VALUE mOCI8BindType;
 static VALUE cOCI8BindTypeBase;
 
@@ -99,17 +99,18 @@ Init_oci8lib()
     Init_oci8_error();
     Init_oci8_env();
 
+    /* OCIHandle class */
+    cOCIHandle = rb_define_class("OCIHandle", rb_cObject);
+    rb_define_alloc_func(cOCIHandle, oci8_s_allocate);
+    rb_define_method(cOCIHandle, "initialize", oci8_handle_initialize, 0);
+    rb_define_method(cOCIHandle, "free", oci8_handle_free, 0);
+
     /* OCI8 class */
-    cOCI8Base = rb_define_class("OCI8Base", rb_cObject);
     cOCI8 = Init_oci8();
+    /* OCI8::BindType module */
     mOCI8BindType = rb_define_module_under(cOCI8, "BindType");
-    cOCI8BindTypeBase = rb_define_class_under(mOCI8BindType, "Base", cOCI8Base);
-
-    rb_define_alloc_func(cOCI8Base, oci8_s_allocate);
-
-    rb_define_method(cOCI8Base, "initialize", oci8_handle_initialize, 0);
-    rb_define_method(cOCI8Base, "free", oci8_handle_free, 0);
-
+    /* OCI8::BindType::Base class */
+    cOCI8BindTypeBase = rb_define_class_under(mOCI8BindType, "Base", cOCIHandle);
 
     /* Handle */
     Init_oci8_bind(cOCI8BindTypeBase);
@@ -132,7 +133,7 @@ Init_oci8lib()
 
 VALUE oci8_define_class(const char *name, oci8_base_class_t *base_class)
 {
-    VALUE klass = rb_define_class(name, cOCI8Base);
+    VALUE klass = rb_define_class(name, cOCIHandle);
     VALUE obj = Data_Wrap_Struct(rb_cObject, 0, 0, base_class);
     rb_ivar_set(klass, id_oci8_class, obj);
     return klass;
@@ -140,7 +141,7 @@ VALUE oci8_define_class(const char *name, oci8_base_class_t *base_class)
 
 VALUE oci8_define_class_under(VALUE outer, const char *name, oci8_base_class_t *base_class)
 {
-    VALUE klass = rb_define_class_under(outer, name, cOCI8Base);
+    VALUE klass = rb_define_class_under(outer, name, cOCIHandle);
     VALUE obj = Data_Wrap_Struct(rb_cObject, 0, 0, base_class);
     rb_ivar_set(klass, id_oci8_class, obj);
     return klass;
